--- a/locale/it_IT/submission.xml
+++ b/locale/it_IT/submission.xml
@@ -36,13 +36,13 @@
 	<message key="submission.done">Fatto</message>
 	<message key="submission.dueDate">Scadenza</message>
 	<message key="submission.due">Scadenza</message>
-	<message key="submission.editing">Lavorazione</message>
-	<message key="submission.editMetadata">Modifica i Metadata</message>
+	<message key="submission.editing">Editing</message>
+	<message key="submission.editMetadata">Modifica i Metadati</message>
 	<message key="submission.email.backToEmailLog">Torna al Log delle Email</message>
 	<message key="submission.email.confirmClearLog">Sei sicuro di voler pulire il log delle email per questa submission?</message>
 	<message key="submission.email.confirmDeleteLogEntry">Sei sicuro di voler cancellare  questa log entry delle email?</message>
 	<message key="submission.email.deleteLogEntry">Cancella la  Log Entry</message>
-	<message key="submission.emailLog">Log di email</message>
+	<message key="submission.emailLog">Log delle email</message>
 	<message key="submission.event.backToEventLog">Torna al Log degli eventi</message>
 	<message key="submission.event.confirmClearLog">Sei sicuro di voler cancellare il log degli eventi per questa submission?</message>
 	<message key="submission.event.confirmDeleteLogEntry">Sei sicuro di voler cancellare questa log entry degli eventi?</message>
@@ -58,12 +58,12 @@
 	<message key="submission.event.reviewer.reviewerRated">Valutazione del revisore inviata</message>
 	<message key="submission.event.reviewer.reviewerUnassigned">Reviewer tolto dalla submission</message>
 	<message key="submission.event.reviewer.reviewFile">Aggiornato il file di revisione</message>
-	<message key="submission.event.reviewer.reviewInitiated">Avviato l'incarico di revisione</message>
+	<message key="submission.event.reviewer.reviewInitiated">Revisione iniziata</message>
 	<message key="submission.event.reviewer.reviewRecommendation">File di segnalazioni della revisione</message>
 	<message key="submission.event.reviewer.reviewReinitiated">Riavviato l'incarico di revisione</message>
 	<message key="submission.event.reviewer.reviewResubmitted">Review rinviata</message>
 	<message key="submission.event.reviewer.reviewRevision">Aggiornato il file di revisioni del revisore</message>
-	<message key="submission.files">Files</message>
+	<message key="submission.files">File</message>
 	<message key="submission.galley">Bozze</message>
 	<message key="submission.history.clearLog">Pulisci il log</message>
 	<message key="submission.history">Storico</message>
@@ -105,7 +105,7 @@
 	<message key="submission.layout.supplementaryFiles">Review dei file aggiuntivi</message>
 	<message key="submission.layout.viewingGalley">Vedi la galleria delle submission</message>
 	<message key="submission.layout.viewProof">Vedi la bozza</message>
-	<message key="submission.metadata">Invio dei Metadata</message>
+	<message key="submission.metadata">Metadati</message>
 	<message key="submission.noReviewAssignments">Nessun revisore assegnato</message>
 	<message key="submission.notes.addNewNote">Aggiungi una nuova nota</message>
 	<message key="submission.notes.attachedFile">File allegato</message>
@@ -114,30 +114,30 @@
 	<message key="submission.notes.clearAllNotes">Cancella tutte le note</message>
 	<message key="submission.notes.collapseNotes">Chiudi le note</message>
 	<message key="submission.notes.confirmDeleteAll">Rimuovere tutte le note di submission?</message>
-	<message key="submission.notes.confirmDelete">Rimuovere la nota di submission?</message>
+	<message key="submission.notes.confirmDelete">Rimuovere le note?</message>
 	<message key="submission.notes.createNewNote">Crea una nuova nota</message>
 	<message key="submission.notes.deleteNote">Cancella la nota</message>
 	<message key="submission.notes.editNote">Modifica la nota</message>
 	<message key="submission.notes.expandNotes">Espandi le note</message>
-	<message key="submission.notes.noSubmissionNotes">Nessuna nota di submission</message>
-	<message key="submission.notes.removeUploadedFile">Rimuove il file inviato</message>
+	<message key="submission.notes.noSubmissionNotes">Nessuna nota</message>
+	<message key="submission.notes.removeUploadedFile">Rimuovi il file</message>
 	<message key="submission.notes">Note per la submission</message>
 	<message key="submission.notes.updateNote">Aggiorna la nota</message>
 	<message key="submission.notes.viewNotes">Vedi le note</message>
 	<message key="submission.originalFile">File originale</message>
-	<message key="submission.page.editing">#{$id} Modifica</message>
+	<message key="submission.page.editing">#{$id} Editing</message>
 	<message key="submission.page.history">#{$id} Storico</message>
 	<message key="submission.page.review">#{$id} Revisione</message>
 	<message key="submission.page.summary">#{$id} Riassunto</message>
-	<message key="submission.peerReview"><![CDATA[Osservazione&nbsp;revisione]]></message>
+	<message key="submission.peerReview">Osservazione revisione</message>
 	<message key="submission.recommendation">Raccomandazione</message>
 	<message key="submission.rejected">Rifiuta</message>
 	<message key="submission.request">Richiesta</message>
 	<message key="submission.response">Rispondi</message>
 	<message key="submission.restrictions">Restrizioni</message>
-	<message key="submission.reviewMetadata">Metadata del revisore</message>
+	<message key="submission.reviewMetadata">Metadati del revisore</message>
 	<message key="submission.review">Revisione</message>
-	<message key="submission.reviewVersion">Versione revisionata</message>
+	<message key="submission.reviewVersion">Versione da revisionare</message>
 	<message key="submissions.active">Attivo</message>
 	<message key="submissions.archived">Archiviato</message>
 	<message key="submission.saveMetadata">Salva i Metadata</message>
@@ -155,13 +155,13 @@
 	<message key="submission.submissionHistory">Storia della submission</message>
 	<message key="submission.submissionManuscript">Manoscritto della submission</message>
 	<message key="submission.submissionReview">Revisione della submission</message>
-	<message key="submission.submitter">Utente che sottomette</message>
+	<message key="submission.submitter">Submitter</message>
 	<message key="submission.summary">Riassunto</message>
 	<message key="submission.supplementaryFiles">Files accessori</message>
 	<message key="submission.supportingAgencies">Enti/organizzazione sponsors</message>
-	<message key="submission.titleAndAbstract">Titolo ed abstract</message>
+	<message key="submission.titleAndAbstract">Titolo e abstract</message>
 	<message key="submission.underway">Intervento</message>
-	<message key="submission.uploadFileTo">Invia il file</message>
-	<message key="submission.viewMetadata">Vedi i Metadata</message>
+	<message key="submission.uploadFileTo">Carica un file file</message>
+	<message key="submission.viewMetadata">Vedi i Metadati</message>
 	<message key="submission.views">Viste</message>
 </locale>
